--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       <div class="second-conta_header" id="SecondHeader">
         <div class="second-cont_header">
           <div class="logo disable-movil">
-            <h1><span>Pet</span>Lover</h1>
+            <h1><span class="color-secondary">Pet</span>Lover</h1>
           </div>
           <ul>
             <li>
@@ -75,7 +75,7 @@
       <div class="container_navbar" id="MenuNavbar">
         <div class="conta_navbar">
           <div class="logo disable-pc activate-movil">
-            <h1><span>Pet</span>Lover</h1>
+            <h1><span class="color-secondary">Pet</span>Lover</h1>
           </div>
           <div class="containar_icon-bar disable-pc activate-movil" onclick="llamar()" id="IconId">
             <i class="icon-bar fa-solid fa-bars-staggered "></i>
@@ -252,7 +252,7 @@
       <article class="container_feature">
         <div class="conta_feature">
           <div class="cont_feature">
-            <figure>
+            <figure class="img_feature">
               <img src="./img/feature.jpg" alt="" width="100%">
             </figure>
             <div class="content_info-feature">
@@ -278,7 +278,7 @@
             <div class="team_person">
               <img src="./img/team-1.jpg" alt="" width="100%" height="100%">
                 <div class="content-team_person">
-                  <h3>Mollies Ross</h3>
+                  <h3><span class="color-secondary">M</span>ollies Ross</h3>
                   <p>Founder & CEO</p>
                     <ul class="social_person">
                       <li><a href="#"><i class="bi bi-facebook"></i></a></li>
@@ -291,7 +291,7 @@
             <div class="team_person">
               <img src="./img/team-2.jpg" alt="" width="100%" height="100%">
               <div class="content-team_person">
-                <h3>Jennifer Page</h3>
+                <h3><span>J</span>ennifer Page</h3>
                 <p>Chef Executive</p>
                   <ul class="social_person">
                     <li><a href="#"><i class="bi bi-facebook"></i></a></li>
@@ -304,7 +304,7 @@
             <div class="team_person">
               <img src="./img/team-3.jpg" alt="" width="100%" height="100%">
               <div class="content-team_person">
-                <h3>Kate Glover</h3>
+                <h3><span>K</span>ate Glover</h3>
                 <p>Doctor</p>
                   <ul class="social_person">
                     <li><a href="#"><i class="bi bi-facebook"></i></a></li>
@@ -317,7 +317,7 @@
             <div class="team_person">
               <img src="./img/team-4.jpg" alt="" width="100%" height="100%">
               <div class="content-team_person">
-                <h3>Lilly Fry</h3>
+                <h3><span>L</span>illy Fry</h3>
                 <p>Trainer</p>
                   <ul class="social_person">
                     <li><a href="#"><i class="bi bi-facebook"></i></a></li>
@@ -337,33 +337,25 @@
           <h2>Our Client <span>Says</span></h2>
           <div class="person_testimonials" id="person_testimonials">
             <div class="person">
-              <figure>
-                <img src="./img/testimonial-1.jpg" alt="">
-              </figure>
+              <img src="./img/testimonial-1.jpg" alt="">
               <h3>Cliente Name</h3>
               <p>Profesional</p>
               <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rerum cupiditate similique molestias eius velit minima soluta quae, ad veritatis voluptatem.</p>
             </div>
             <div class="person">
-              <figure>
-                <img src="./img/testimonial-2.jpg" alt="">
-              </figure>
+              <img src="./img/testimonial-2.jpg" alt="">
               <h3>Cliente Name</h3>
               <p>Profesional</p>
               <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rerum cupiditate similique molestias eius velit minima soluta quae, ad veritatis voluptatem.</p>
             </div>
             <div class="person">
-              <figure>
-                <img src="./img/testimonial-3.jpg" alt="">
-              </figure>
+              <img src="./img/testimonial-3.jpg" alt="">
               <h3>Cliente Name</h3>
               <p>Profesional</p>
               <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rerum cupiditate similique molestias eius velit minima soluta quae, ad veritatis voluptatem.</p>
             </div>
             <div class="person">
-              <figure>
-                <img src="./img/testimonial-4.jpg" alt="">
-              </figure>
+              <img src="./img/testimonial-4.jpg" alt="">
               <h3>Cliente Name</h3>
               <p>Profesional</p>
               <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rerum cupiditate similique molestias eius velit minima soluta quae, ad veritatis voluptatem.</p>
